--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "author": "Walter Cumbucane",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.11.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "express": "^4.18.3",
-    "nodemon": "^3.1.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.0",
+    "prisma": "^5.11.0",
+    "uuid": "^9.0.1"
   }
 }
